ggml/63/f00d5628a75d1f6f000b7f6d9027868a230216/ggml-4-x86-cuda-v100/ctest_debug-make.log
+ make -j
[  1%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  4%] Building CUDA object src/CMakeFiles/ggml.dir/ggml-cuda.cu.o
/home/ggml/work/ggml/src/ggml-cuda.cu(8658): error: expected a ")"
                           , "%s: cannot compute %s: src0->ne[3] = " PRId64 ", src1->ne[3] = " PRId64 " - fallback to CPU\n", __func__, tensor->name, tensor->src[0]->ne[3], tensor->src[1]->ne[3]);
                                                                     ^

1 error detected in the compilation of "/home/ggml/work/ggml/src/ggml-cuda.cu".
make[2]: *** [src/CMakeFiles/ggml.dir/build.make:133: src/CMakeFiles/ggml.dir/ggml-cuda.cu.o] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:407: src/CMakeFiles/ggml.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[  5%] Linking CXX static library libcommon.a
[  5%] Built target common
make: *** [Makefile:146: all] Error 2

real	0m4.619s
user	0m7.991s
sys	0m0.812s
